Switched to Tomcat 8.5